# PerkTutor

./: .gitmodules  CMakeCache.txt  CMakeLists.txt  CTestConfig.cmake  FuzzySkillEvaluator.py  InputOutputMemberships.py  PerkTutorCouchDB.py  PerkTutorLogoDesign.xcf  PythonMetricsCalculator.py  README.md  SequencesInclude.cmake  SkillAssessment.py  SuperBuild.cmake  TissueModelCreator.py  qSlicerMetricScriptReader.cxx  qSlicerPerkEvaluatorModule.cxx  qSlicerPerkEvaluatorModule.h  qSlicerPerkEvaluatorModuleWidget.cxx  qSlicerPerkEvaluatorModuleWidget.h  qSlicerTablesReader.cxx  qSlicerTablesReader.h  qSlicerTargetFiducialsModule.cxx  qSlicerTargetFiducialsModuleWidget.cxx  qSlicerTrackedSequenceBrowserReader.cxx  qSlicerTrackedSequenceBrowserReader.h  qSlicerTrackedSequenceBrowserWriter.cxx  qSlicerTrackedSequenceBrowserWriter.h  qSlicerTransformBufferReader.cxx  qSlicerTransformBufferReader.h  qSlicerTransformRecorderIO.cxx  qSlicerTransformRecorderIO.h  qSlicerTransformRecorderModule.cxx  qSlicerTransformRecorderModule.h  qSlicerTransformRecorderModuleWidget.cxx  qSlicerTransformRecorderModuleWidget.h  qSlicerWorkflowSegmentationModule.cxx  qSlicerWorkflowSegmentationModule.h  qSlicerWorkflowSegmentationModuleWidget.cxx  qSlicerWorkflowSegmentationModuleWidget.h  qSlicerWorkflowTrainingReader.h
AssessmentMethods/: CMakeLists.txt  Fuzzy.py  LinearCombination.py  NearestNeighbor.py  Regression.py  __init__.py
AssessmentMethods/FuzzyLogic/: Defuzzifier.py  MembershipFunction.py  __init__.py
FuzzyLogic/: BinaryFunction.py  Defuzzification.py  FuzzyRule.py  __init__.py
Logic/: CMakeLists.txt  RecordType.h  vtkMarkovModel.cxx  vtkMarkovModel.h  vtkMarkovModelRT.cxx  vtkMarkovModelRT.h  vtkProcedure.cxx  vtkProcedure.h  vtkRecordLog.cxx  vtkRecordLog.h  vtkRecordLogRT.cxx  vtkRecordLogRT.h  vtkSlicerPerkEvaluatorLogic.cxx  vtkSlicerPerkEvaluatorLogic.h  vtkSlicerTargetFiducialsLogic.cxx  vtkSlicerTargetFiducialsLogic.h  vtkSlicerTransformRecorderLogic.cxx  vtkSlicerTransformRecorderLogic.h  vtkSlicerWorkflowSegmentationLogic.cxx  vtkSlicerWorkflowSegmentationLogic.h  vtkTrackingRecord.cxx  vtkTrackingRecord.h  vtkTransformTimeSeries.cxx  vtkTransformTimeSeries.h  vtkWorkflowAlgorithm.cxx  vtkWorkflowAlgorithm.h
MRML/: CMakeLists.txt  vtkLabelRecord.cxx  vtkLabelRecord.h  vtkLabelVector.cxx  vtkLabelVector.h  vtkLogRecord.cxx  vtkLogRecord.h  vtkLogRecordBuffer.cxx  vtkLogRecordBuffer.h  vtkMRMLMetricInstanceNode.cxx  vtkMRMLMetricInstanceNode.h  vtkMRMLMetricScriptNode.cxx  vtkMRMLMetricScriptNode.h  vtkMRMLMetricScriptStorageNode.cxx  vtkMRMLPerkEvaluatorNode.cxx  vtkMRMLPerkEvaluatorNode.h  vtkMRMLTableNode.cxx  vtkMRMLTableNode.h  vtkMRMLTableStorageNode.cxx  vtkMRMLTableStorageNode.h  vtkMRMLTransformBufferNode.cxx  vtkMRMLTransformBufferNode.h  vtkMRMLTransformBufferStorageNode.cxx  vtkMRMLTransformBufferStorageNode.h  vtkMRMLTransformRecorderNode.cxx  vtkMRMLTransformRecorderNode.h  vtkMRMLWorkflowInputNode.cxx  vtkMRMLWorkflowInputNode.h  vtkMRMLWorkflowInputStorageNode.cxx  vtkMRMLWorkflowInputStorageNode.h  vtkMRMLWorkflowProcedureNode.cxx  vtkMRMLWorkflowProcedureNode.h  vtkMRMLWorkflowProcedureStorageNode.cxx  vtkMRMLWorkflowProcedureStorageNode.h  vtkMRMLWorkflowSegmentationNode.cxx  vtkMRMLWorkflowSegmentationNode.h  vtkMRMLWorkflowSequenceNode.cxx  vtkMRMLWorkflowSequenceNode.h  vtkMRMLWorkflowSequenceOnlineNode.cxx  vtkMRMLWorkflowToolNode.cxx  (+41 more)
PerkEvaluator/: CMakeLists.txt  (+5 more)
PythonMetricsCalculator/: CMakeLists.txt  PythonMetricsCalculator.py  README.md
PythonMetricsCalculator/Data/InPlane/: ImageToReference.h5  Message-Sequence.mrb  NeedleTipToNeedle.h5  NeedleToReference-Sequence.mrb  NeedleToReference.h5  TissueModel.stl
PythonMetricsCalculator/Data/Lumbar/: ProbeToRAS.tfm  StylusTipRotation.tfm  TrueMetricsTable.tsv
SkillAssessment/: CMakeLists.txt  README.md  SkillAssessment.py
SkillAssessment/AssessmentMethods/: Benchmark.py  DecisionTree.py  Feedforward.py  Fuzzy.py  LinearCombination.py  Regression.py  __init__.py
SkillAssessment/AssessmentMethods/FuzzyLogic/: Defuzzifier.py  FuzzyRule.py  MembershipFunction.py  __init__.py
Widgets/: CMakeLists.txt  qSlicerAssessmentTableWidget.cxx  qSlicerAssessmentTableWidget.h  qSlicerFooBarWidget.cxx  qSlicerFooBarWidget.h  qSlicerMessagesWidget.cxx  qSlicerMessagesWidget.h  qSlicerMetricWeightWidget.cxx  qSlicerMetricWeightWidget.h  qSlicerMetricsTableWidget.cxx  qSlicerMetricsTableWidget.h  qSlicerPerkEvaluatorAnatomyRolesWidget.cxx  qSlicerPerkEvaluatorAnatomyRolesWidget.h  qSlicerPerkEvaluatorMessagesWidget.cxx  qSlicerPerkEvaluatorMessagesWidget.h  qSlicerPerkEvaluatorRecorderControlsWidget.cxx  qSlicerPerkEvaluatorRecorderControlsWidget.h  qSlicerPerkEvaluatorRolesWidget.cxx  qSlicerPerkEvaluatorRolesWidget.h  qSlicerPerkEvaluatorTransformBufferWidget.cxx  qSlicerPerkEvaluatorTransformBufferWidget.h  qSlicerPerkEvaluatorTransformRolesWidget.cxx  qSlicerPerkEvaluatorTransformRolesWidget.h  qSlicerRecorderControlsWidget.cxx  qSlicerRecorderControlsWidget.h  qSlicerTrackedSequenceBrowserWidget.cxx  qSlicerTrackedSequenceBrowserWidget.h  qSlicerTrackedSequenceMessagesWidget.cxx  qSlicerTrackedSequenceMessagesWidget.h  qSlicerTrackedSequenceRecorderControlsWidget.cxx  qSlicerTrackedSequenceRecorderControlsWidget.h  qSlicerTransformBufferWidget.cxx  qSlicerTransformBufferWidget.h  qSlicerTransformBufferWidgetHelper.cxx  qSlicerTransformBufferWidgetHelper.h  qSlicerTransformSelectionWidget.cxx  qSlicerTransformSelectionWidget.h  qSlicerVTKObjectDecorator.cxx  qSlicerVTKObjectDecorator.h  qSlicerWorkflowGuideDisplayWidget.cxx  (+7 more)
Widgets/Resources/UI/: qSlicerAssessmentTableWidget.ui  qSlicerMessagesWidget.ui  qSlicerMetricWeightWidget.ui  qSlicerMetricsTableWidget.ui  qSlicerRecorderControlsWidget.ui  qSlicerTrackedSequenceBrowserWidget.ui  qSlicerTrackedSequenceMessagesWidget.ui  qSlicerTrackedSequenceRecorderControlsWidget.ui  qSlicerTransformBufferWidget.ui  qSlicerTransformSelectionWidget.ui  qSlicerWorkflowGuideDisplayWidget.ui  qSlicerWorkflowToolSummaryWidget.ui  qSlicerWorkflowToolWidget.ui
(+171 files in other folders)
